--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         </div>
     </section>
 
-    <div class="container">
+     <div class="container">
         <h2 class="section-title" id="downloads">Available Configurations</h2>
         <div class="vpn-files">
             <!-- VPN File 1 -->
@@ -475,7 +475,7 @@
                 <div class="vpn-img" style="background-image: url('https://images.unsplash.com/photo-1563986768609-322da13575f3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
                 </div>
                 <div class="vpn-content">
-                    <h3>Japan Server</h3>
+                    <h3>Japan Server 1</h3>
                     <div class="vpn-meta">
                         <span>210.100.37.194</span>
                         <span class="protocol tcp">TCP 443</span>
@@ -496,7 +496,7 @@
                         <span>public-vpn-196.opengw.net</span>
                         <span class="protocol tcp">TCP 443</span>
                     </div>
-                    <a href="Vpn_ovpn_files/vpngate.public-vpn-196.opengw.net_tcp_443.ovpn" class="download-btn" download>
+                    <a href="Vpn_ovpn_files/vpngate_public-vpn-196.opengw.net_tcp_443.ovpn" class="download-btn" download>
                         <i class="fas fa-download"></i> Download Config
                     </a>
                 </div>
@@ -507,7 +507,7 @@
                 <div class="vpn-img" style="background-image: url('https://images.unsplash.com/photo-1508804185872-d7badad00f7d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
                 </div>
                 <div class="vpn-content">
-                    <h3>Japan Server</h3>
+                    <h3>Japan Server 2</h3>
                     <div class="vpn-meta">
                         <span>210.100.37.193</span>
                         <span class="protocol udp">UDP 1195</span>
@@ -523,12 +523,12 @@
                 <div class="vpn-img" style="background-image: url('https://images.unsplash.com/photo-1538970272646-f61fabb3be8a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1469&q=80');">
                 </div>
                 <div class="vpn-content">
-                    <h3>USA Server</h3>
+                    <h3>USA Server 1</h3>
                     <div class="vpn-meta">
                         <span>public-vpn-185.opengw.net</span>
                         <span class="protocol tcp">TCP 443</span>
                     </div>
-                    <a href="Vpn_ovpn_files/vpngate.public-vpn-185.opengw.net_tcp_443.ovpn" class="download-btn" download>
+                    <a href="Vpn_ovpn_files/vpngate_public-vpn-185.opengw.net_tcp_443.ovpn" class="download-btn" download>
                         <i class="fas fa-download"></i> Download Config
                     </a>
                 </div>
@@ -544,7 +544,7 @@
                         <span>vpn663330361.opengw.net</span>
                         <span class="protocol tcp">TCP 1483</span>
                     </div>
-                    <a href="Vpn_ovpn_files/vpngate.vpn663330361.opengw.net_tcp_1483.ovpn" class="download-btn" download>
+                    <a href="Vpn_ovpn_files/vpngate_vpn663330361.opengw.net_tcp_1483.ovpn" class="download-btn" download>
                         <i class="fas fa-download"></i> Download Config
                     </a>
                 </div>
@@ -560,15 +560,76 @@
                         <span>60.69.230.22</span>
                         <span class="protocol udp">UDP 1450</span>
                     </div>
-                    <a href="Vpn_ovpn_files/vpngate.60.69.230.22_udp_1450.ovpn" class="download-btn" download>
+                    <a href="Vpn_ovpn_files/vpngate_60.69.230.22_udp_1450.ovpn" class="download-btn" download>
                         <i class="fas fa-download"></i> Download Config
                     </a>
                 </div>
             </div>
 
-            <!-- Add more VPN files as needed -->
-        </div>
+            <!-- VPN File 7 -->
+            <div class="vpn-card animated">
+                <div class="vpn-img" style="background-image: url('https://images.unsplash.com/photo-1483729558449-99ef09a8c325?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
+                </div>
+                <div class="vpn-content">
+                    <h3>USA Server 2</h3>
+                    <div class="vpn-meta">
+                        <span>public-vpn-53.opengw.net</span>
+                        <span class="protocol tcp">TCP 443</span>
+                    </div>
+                    <a href="Vpn_ovpn_files/vpngate_public-vpn-53.opengw.net_tcp_443.ovpn" class="download-btn" download>
+                        <i class="fas fa-download"></i> Download Config
+                    </a>
+                </div>
+            </div>
 
+            <!-- VPN File 8 -->
+            <div class="vpn-card animated delay-1">
+                <div class="vpn-img" style="background-image: url('https://images.unsplash.com/photo-1542051841857-5f90071e7989?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
+                </div>
+                <div class="vpn-content">
+                    <h3>Japan Server 3</h3>
+                    <div class="vpn-meta">
+                        <span>210.100.37.225</span>
+                        <span class="protocol tcp">TCP 443</span>
+                    </div>
+                    <a href="Vpn_ovpn_files/vpngate_210.100.37.225_tcp_443.ovpn" class="download-btn" download>
+                        <i class="fas fa-download"></i> Download Config
+                    </a>
+                </div>
+            </div>
+
+            <!-- VPN File 9 -->
+            <div class="vpn-card animated delay-2">
+                <div class="vpn-img" style="background-image: url('https://images.unsplash.com/photo-1518391846015-55a9cc003b25?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');">
+                </div>
+                <div class="vpn-content">
+                    <h3>USA Server 3</h3>
+                    <div class="vpn-meta">
+                        <span>public-vpn-182.opengw.net</span>
+                        <span class="protocol tcp">TCP 443</span>
+                    </div>
+                    <a href="Vpn_ovpn_files/vpngate_public-vpn-182.opengw.net_tcp_443.ovpn" class="download-btn" download>
+                        <i class="fas fa-download"></i> Download Config
+                    </a>
+                </div>
+            </div>
+
+            <!-- VPN File 10 -->
+            <div class="vpn-card animated">
+                <div class="vpn-img" style="background-image: url('https://images.unsplash.com/photo-1492571350019-22de08371fd3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1453&q=80');">
+                </div>
+                <div class="vpn-content">
+                    <h3>Japan Server 4</h3>
+                    <div class="vpn-meta">
+                        <span>210.100.37.177</span>
+                        <span class="protocol tcp">TCP 443</span>
+                    </div>
+                    <a href="Vpn_ovpn_files/vpngate_210.100.37.177_tcp_443.ovpn" class="download-btn" download>
+                        <i class="fas fa-download"></i> Download Config
+                    </a>
+                </div>
+            </div>
+        </div>
         <h2 class="section-title" id="features">Why Choose OpenGate VPN?</h2>
         <div class="features">
             <div class="feature-card animated">
